close #9: fix mixed namespaces in dialogs

--- a/dialogs-dark.css
+++ b/dialogs-dark.css
@@ -12,6 +12,7 @@
  */
 
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
+@namespace html url(http://www.w3.org/1999/xhtml);
 
 @-moz-document
     /* settings */
@@ -72,7 +73,7 @@
 
     dialog,
     image,
-    img,
+    *|img,
     menupopup,
     page,
     prefwindow,
