--- a/dialogs-dark.css
+++ b/dialogs-dark.css
@@ -5,7 +5,7 @@
  * @licence CC-BY-SA-4.0 or MIT
  * @description
  *     Turns all build-in and some add-on Firefox and Thunderbird dialog windows dark.
- *     Background colours are inspired by the Developer Edition theme.
+ *     Background colors are inspired by the Developer Edition theme.
  *     The style uses inversion filters, so some icons (those in theechildren).
  *
  *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/stylish
