--- a/raw-text-dark.css
+++ b/raw-text-dark.css
@@ -11,28 +11,40 @@
 
 @namespace url(http://www.w3.org/1999/xhtml); /* i really want this to be global */
 
-body>pre:first-child,
-body#viewsource.highlight>pre
+@-moz-document
+    regexp("^moz-extension://(?!.*[.]html?(:?$|[?#])).*$"),
+    regexp("^https?://(?!(?:tools|www)[.]ietf[.]org).*[.](?:css|js|txt)$")
 {
-    filter: invert(100%) hue-rotate(180deg) contrast(90%) saturate(200%) brightness(125%);
-    background-color: #E6E9EC; /* inspector body color filtered */
-    font-size: 16px;
-    position: fixed;
-    overflow: scroll;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    bottom: -16px;
-    padding: 15px;
+    :root:not([class])>body:not([class])>pre:only-child /* .txt files */
+    {
+        filter: invert(100%) hue-rotate(180deg) contrast(90%) saturate(200%) brightness(125%);
+        background-color: #E6E9EC; /* inspector body color filtered */
+        font-size: 16px;
+        position: fixed;
+        overflow: scroll;
+        top: 0px;
+        left: 0px;
+        right: 0px;
+        bottom: -16px;
+        padding: 15px;
+    }
 }
-body#viewsource.highlight>pre
+
+@-moz-document
+    url-prefix("view-source:")
 {
-    bottom: 0px;
-    margin: 0px;
-    padding: 10px 50px;
-}
-pre[id]:before,
-span[id]:before
-{
-    color: #25ffc9;
+    body#viewsource>pre:first-child
+    {
+        filter: invert(100%) hue-rotate(180deg) contrast(90%) saturate(200%) brightness(125%);
+        background-color: #E6E9EC; /* inspector body color filtered */
+        font-size: 16px;
+        position: fixed;
+        overflow: scroll;
+        top: 0px;
+        left: 0px;
+        right: 0px;
+        bottom: 0px;
+        margin: 0px;
+        padding: 10px 50px;
+    }
 }
