--- a/thunderbird-dark.css
+++ b/thunderbird-dark.css
@@ -37,6 +37,21 @@
         background: #F0F0F0 !important;
     }
 
+    /* tabs at the very top of the window */
+    window[sizemode="normal"] #navigation-toolbox
+    { margin-top: -17px; }
+    window[sizemode="maximized"] #navigation-toolbox
+    { margin-top: -2px; }
+
+    /* exclude window button area */
+    #titlebar-placeholder-on-TabsToolbar-for-captions-buttons
+    { background: transparent; }
+    window[sizemode="maximized"] #titlebar-placeholder-on-TabsToolbar-for-captions-buttons
+    { background-image: linear-gradient(180deg, transparent 90%, black 90%); }
+
+    /* macOS fix */
+    .main-header-area
+    { background-color: buttonface; }
 }
 
 @-moz-document
@@ -86,4 +101,8 @@
     {
         /* filter: invert(100%) hue-rotate(180deg); */
     }
+
+    /* macOS fix */
+    #msgheaderstoolbar-box
+    { background-color: #E6E9EC; }
 }
